try/resource executor service